--- a/识别电线.md
+++ b/识别电线.md
@@ -3,14 +3,14 @@
 ## 安装TensorFlow
 TensorFlow的下载以及安装的步骤可以参考[`ＧitHub`](https://github.com/tensorflow/tensorflow)。
 或者可以参考极客学院提供的中文版文档，[传送门](http://wiki.jikexueyuan.com/project/tensorflow-zh/get_started/os_setup.html)。
-这里只给出Ｕｂｕｎｔｕ Ｐｉｐ安装的教程。其他操作系统和安装方法可通过上面的链接获得。
+这里只给出Ubuntu Pip安装的教程。其他操作系统和安装方法可通过上面的链接获得。
 
 ### Pip 安装
-Pip 是一个 Python 的软件包安装与管理工具。首先安装Ｐｉｐ（或者Ｐｙｔｈｏｎ３的ｐｉｐ３）：
+Pip 是一个 Python 的软件包安装与管理工具。首先安装Pip（或者python3的pip3）：
 ```shell
 $ sudo apt-get install python-pip python-dev
 ```
-安装ＴｅｎｓｏｒＦｌｏｗ：
+安装TensorFlow：
 ```shell
 # Ubuntu/Linux 64-bit, CPU only, Python 2.7:
 $ sudo pip install --upgrade https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-1.2.0-cp27-none-linux_x86_64.whl
@@ -20,7 +20,7 @@ $ sudo pip install --upgrade https://storage.googleapis.com/tensorflow/linux/cpu
 $ sudo pip install --upgrade https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow-1.2.0-cp27-none-linux_x86_64.whl
 ```
 
-安装完后，可以运行一个简单的Ｐｙｔｈｏｎ代码测试。
+安装完后，可以运行一个简单的Python代码测试。
 ```shell
 $ python
 ```
@@ -37,14 +37,14 @@ $ python
 >>> sess.close()
 ```
 
-## 运行ＴｅｎｓｏｒＦｌｏｗ
-首先，需要把ＴｅｎｓｏｒＦｌｏｗ的Ｒｅｐｏ克隆到本地。
+## 运行TensorFlow
+首先，需要把TensorFlow的Repo克隆到本地。
 ```shell
 $ git checkout https://github.com/tensorflow/tensorflow.git
 ```
 [`makefile`](https://github.com/tensorflow/tensorflow/tree/master/tensorflow/contrib/makefile)目录下提供了
-如何在各个平台上编译ＴｅｎｓｏｒＦｌｏｗ的详细说明以及脚本文件。编译成功后会生成一个`benchmark`用于检测整个系统是否搭建成功。
-由于测试的系统是Ｕｂｕｎｔｕ的，这里还是给出Ｕｂｕｎｔｕ下的编译说明。不管是哪个平台上，编译前需要下载一些依赖项。这个脚本只需要运行一次，下载完成即可。
+如何在各个平台上编译TensorFlow的详细说明以及脚本文件。编译成功后会生成一个`benchmark`用于检测整个系统是否搭建成功。
+由于测试的系统是Ubuntu的，这里还是给出Ubuntu下的编译说明。不管是哪个平台上，编译前需要下载一些依赖项。这个脚本只需要运行一次，下载完成即可。
 （**所有命令需要在根目录下运行**）
 ```shell
 $ tensorflow/contrib/makefile/download_dependencies.sh
@@ -52,7 +52,7 @@ $ tensorflow/contrib/makefile/download_dependencies.sh
 相关的库文件会保存在`tensorflow/contrib/makefile/downloads/`文件夹内。另外，需要下载一个测试用的graph: 
 [inception](https://storage.googleapis.com/download.tensorflow.org/models/inception5h.zip)
 
-在Ｕｂｕｎｔｕ上编译前需确保相关的软件包已经安装好，可先运行：
+在Ubuntu上编译前需确保相关的软件包已经安装好，可先运行：
 ```shell
 $ sudo apt-get install autoconf automake libtool curl make g++ unzip zlib1g-dev \
 git python
@@ -61,7 +61,7 @@ git python
 ```shell
 $ tensorflow/contrib/makefile/build_all_linux.sh
 ```
-编译完成后，会生成可执行文件`tensorflow/contrib/makefile/gen/bin/benchmark`。下载ｇｒａｐｈ后，需解压缩：
+编译完成后，会生成可执行文件`tensorflow/contrib/makefile/gen/bin/benchmark`。下载graph后，需解压缩：
 ```shell
 $ mkdir -p ~/graphs
 $ curl -o ~/graphs/inception.zip \
@@ -74,32 +74,32 @@ $ tensorflow/contrib/makefile/gen/bin/benchmark \
  --graph=$HOME/graphs/inception/tensorflow_inception_graph.pb
 ```
 
-## 在Ａｎｄｒｏｉｄ上运行label_image
-本项目的平台是Ｖ２上的Ａｎｄｒｏｉｄ，识别电线使用的是深度学习图片分类的功能。
-ＴｅｎｓｏｒＦｌｏｗ的Ｇｉｔｈｕｂ上已经提供了在Ｒａｓｐｂｅｒｒｙ上运行图片分类的Ｃ＋＋代码ｌａｂｅｌｅｄ_image，在`tensorflow/contrib/pi_examples`目录下可找到详细说明。
-而在Ａｎｄｒｏｉｄ上运行需要对应把一些文件换成Ａｎｄｒｏｉｄ版的。编译ｌａｂｅｌ_image之前需要得到一个ＴｅｎｓｏｒＦｌｏｗ的静态库。
-上面运行`build_all_linux.sh`的时候已经生成了一个Ｌｉｎｕｘ下的库，Ａｎｄｒｏｉｄ下的需要对应的运行`build_all_android.sh`。
-载入图片需要的ｌｉｂｊｐｅｇ.so，在Ａｎｄｒｏｉｄ上也需要单独下载安装(忘了链接，需要的话可以找我拷)。Ｕｂｕｎｔｕ下可直接运行：
+## 在Android上运行label_image
+本项目的平台是Ｖ２上的Android，识别电线使用的是深度学习图片分类的功能。
+TensorFlow的GitHub上已经提供了在Raspberry上运行图片分类的Ｃ＋＋代码label_image，在`tensorflow/contrib/pi_examples`目录下可找到详细说明。
+而在Android上运行需要对应把一些文件换成Android版的。编译label_image之前需要得到一个TensorFlow的静态库。
+上面运行`build_all_linux.sh`的时候已经生成了一个Linux下的库，Android下的需要对应的运行`build_all_android.sh`。
+载入图片需要的libjpeg.so，在Android上也需要单独下载安装(忘了链接，需要的话可以找我拷)。Ubuntu下可直接运行：
 ```shell
 $ sudo apt-get install -y libjpeg-dev
 ```
-为了生成可以在Ａｎｄｒｏｉｄ上运行的ｌａｂｅｌ_image，这里的ｍａｋｅｆｉｌｅ参考了生成Ａｎｄｒｏｉｄ benchmark的ｍａｋｅｆｉｌｅ。＠祖国将整理后的文件上传到了Ｇｉｔｈｕｂ，
-[链接](https://github.com/yuzuguo/tensorflow/tree/master/tensorflow/contrib/pi_examples/input_image)。可直接克隆＠祖国的Ｒｅｐｏ运行,
-或者根据他的文件进行修改。主要注意ｍａｋｅｆｉｌｅ以及编译时的参数，如`arm64-v8a`。运行前Ａｎｄｒｏｉｄ版需要Ｖ２上对应的ＮＤＫ（未上传），并设置本地的路径：
+为了生成可以在Android上运行的label_image，这里的makefile参考了生成Android benchmark的makefile。＠祖国将整理后的文件上传到了GitHub，
+[链接](https://github.com/yuzuguo/tensorflow/tree/master/tensorflow/contrib/pi_examples/input_image)。可直接克隆＠祖国的Repo运行,
+或者根据他的文件进行修改。主要注意makefile以及编译时的参数，如`arm64-v8a`。运行前Android版需要V2上对应的NDK(未上传)，并设置本地的路径：
 ```shell
 $ export NDK_ROOT=/absolute/path/to/NDK/android-ndk-rxxx/
 ```
 
 
-## 获取ＭｏｂｉｌｅＮｅｔ模型
+## 获取MobileNet模型
 编译好可执行图像分类代码后，最重要的找到一个合适的深度学习模型。
-[tensorflow/models](https://github.com/tensorflow/models)这里主要是提供各种基于ＴｅｎｓｏｒＦｌｏｗ实现的深度学习模型。
-这次识别电线用到的ＭｏｂｉｌｅＮｅｔ也是从这里获取的。ＭｏｂｉｌｅＮｅｔ是Ｇｏｏｇｌｅ提出的一个针对移动端的轻量级深度学习模型。
-除了现成的模型，这里还包含了整个基于ＴｅｎｓｏｒＦｌｏｗ的深度学习训练工具以及说明文档。之后项目的训练也会基于这些工具进行。
-建议将这个Ｒｅｐｏ克隆到本地。
+[tensorflow/models](https://github.com/tensorflow/models)这里主要是提供各种基于TensorFlow实现的深度学习模型。
+这次识别电线用到的MobileNet也是从这里获取的。MobileNet是Google提出的一个针对移动端的轻量级深度学习模型。
+除了现成的模型，这里还包含了整个基于TensorFlow的深度学习训练工具以及说明文档。之后项目的训练也会基于这些工具进行。
+建议将这个Repo克隆到本地。
 
 ```shell
 $ git checkout https://github.com/tensorflow/models.git
 ```
 
-### ＭｏｂｉｌｅＮｅｔ_v1
+### MobileNet_v1
