--- a/识别电线.md
+++ b/识别电线.md
@@ -1,7 +1,7 @@
 # 深度学习识别电线实现说明
 
 ## 安装TensorFlow
-TensorFlow的下载以及安装的步骤可以参考[`ＧitHub`](https://github.com/tensorflow/tensorflow)。
+TensorFlow的下载以及安装的步骤可以参考[`GitHub`](https://github.com/tensorflow/tensorflow)。
 或者可以参考极客学院提供的中文版文档，[传送门](http://wiki.jikexueyuan.com/project/tensorflow-zh/get_started/os_setup.html)。
 这里只给出Ubuntu Pip安装的教程。其他操作系统和安装方法可通过上面的链接获得。
 
@@ -45,7 +45,7 @@ $ git checkout https://github.com/tensorflow/tensorflow.git
 [`makefile`](https://github.com/tensorflow/tensorflow/tree/master/tensorflow/contrib/makefile)目录下提供了
 如何在各个平台上编译TensorFlow的详细说明以及脚本文件。编译成功后会生成一个`benchmark`用于检测整个系统是否搭建成功。
 由于测试的系统是Ubuntu的，这里还是给出Ubuntu下的编译说明。不管是哪个平台上，编译前需要下载一些依赖项。这个脚本只需要运行一次，下载完成即可。
-（**所有命令需要在根目录下运行**）
+(**所有命令需要在根目录下运行**)
 ```shell
 $ tensorflow/contrib/makefile/download_dependencies.sh
 ```
